--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "__MSG_appName__",
+  "name": "twtsus",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "__MSG_appDescription__",
+  "description": "Tweet as long as you'd like",
   "icons": {
     "16": "images/icon-16.png",
     "128": "images/icon-128.png"
@@ -13,14 +13,6 @@
       "scripts/chromereload.js",
       "scripts/background.js"
     ]
-  },
-  "browser_action": {
-    "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
-    },
-    "default_title": "twtsus",
-    "default_popup": "popup.html"
   },
   "omnibox": {
     "keyword": "twtsus"
