--- a/twtsus-server/package.json
+++ b/twtsus-server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server.js"
   },
   "dependencies": {
     "bluebird": "^2.9.34",
