--- a/twtsus-extension/app/manifest.json
+++ b/twtsus-extension/app/manifest.json
@@ -25,6 +25,9 @@
         "scripts/jquery.2.1.1.min.js",
         "scripts/contentscript.js"
       ],
+      "css": [
+        "styles/override.css"
+      ],
       "run_at": "document_end",
       "all_frames": false
     }
