--- a/twtsus-extension/app/manifest.json
+++ b/twtsus-extension/app/manifest.json
@@ -1,14 +1,11 @@
 {
-  "name": "twts - tweet as long as you like",
-  "version": "0.0.4",
+  "name": "Twts - tweet as long as you like",
+  "version": "0.0.5",
   "manifest_version": 2,
   "description": "Tweet as long as you like. Never be bounded by 140 characters limit.",
   "default_locale": "en",
   "background": {
     "scripts": []
-  },
-  "omnibox": {
-    "keyword": "twts"
   },
   "content_scripts": [
     {
